tests/Compilation/negative/test003.juvix
-- pattern matching coverage in lambdas
module test003;

open import Stdlib.Prelude;

main : Nat;
main := λ{ zero := 1 | (suc (suc _)) := 2 } 1;
